# Ohanna-Vision

./: .gitignore  BRAND-GUIDELINES.md  CHANGELOG.md  INTEGRATION.md  README.md  ROADMAP.md  actual_topology.json  pyproject.toml
branding/: site.webmanifest
config/: vision.development.yaml  vision.example.yaml  vision.yaml
docs/: Administration.md  Architecture.md  CHANGELOG.md  Health-Model.md  Observation-Model.md  Vision.md
docs/Architecture/: ADR-0000 - Vision d'Architecture.md  ADR-0001 - Projection Engine.md  ADR-0002 - Health Engine.md  ADR-0003 - Timeline Engine.md
scripts/: inject_demo_observations.py
src/ohana_vision/: __init__.py  __main__.py  main.py
src/ohana_vision/administration/: __init__.py  client.py
src/ohana_vision/configuration/: __init__.py  agent.py  application.py  base.py  environment.py  loader.py  server.py  web.py
src/ohana_vision/connector/: __init__.py  agent_connector.py  connector_runtime.py  connector_state.py  connector_statistics.py  observation_processor_protocol.py
src/ohana_vision/domain/: __init__.py  capability_state.py  health.py  infrastructure_state.py  node_state.py  observation.py  observation_store.py  service_state.py
src/ohana_vision/health/: __init__.py  health_engine.py  health_policy.py  health_report.py
src/ohana_vision/projection/: __init__.py  capability_reducer.py  infrastructure_reducer.py  node_reducer.py  projection_engine.py  service_reducer.py
src/ohana_vision/runtime/: __init__.py  backend_runtime.py  backend_runtime_state.py  observation_processor.py  processing_result.py  runtime_snapshot.py  runtime_statistics.py  timeline_runtime.py
src/ohana_vision/timeline/: __init__.py  capability_timeline.py  infrastructure_timeline.py  node_timeline.py  service_timeline.py  state_period.py  timeline_engine.py  timeline_validation.py
src/ohana_vision/topology/: __init__.py  ohana_house_topology.py  (+6 more)
src/ohanna_vision/: __init__.py  __main__.py  main.py
src/ohanna_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py  test_packaging.py
tests/configuration/: test_application_configuration.py  test_configuration_loader.py
tests/connector/: test_agent_connector.py  test_connector_result.py  test_connector_runtime.py  test_connector_state.py  test_connector_statistics.py  test_observation_processor_protocol.py
tests/data/: demo_observations.json  demo_timeline.json  demo_topology.json
tests/domain/: test_capability_state.py  test_health.py  test_infrastructure_state.py  test_node_state.py  test_observation.py  test_observation_store.py  test_service_state.py
tests/health/: test_health_engine.py  test_health_policy.py
tests/integration/: test_observation_pipeline.py  test_rest_websocket_pipeline.py
tests/projection/: test_capability_reducer.py  test_infrastructure_reducer.py  test_node_reducer.py  test_projection_engine.py  test_service_reducer.py
tests/runtime/: test_backend_runtime.py  test_backend_runtime_state.py  test_observation_processor.py  test_processing_result.py  test_runtime_snapshot.py  test_runtime_statistics.py  test_timeline_runtime.py
tests/timeline/: test_capability_timeline.py  test_hierarchical_timelines.py  test_state_period.py  test_timeline_engine.py
tests/topology/: __init__.py  test_ohana_house_topology.py  test_ohanna_house_topology.py  test_topology.py  test_topology_device.py  test_topology_invariants.py  test_topology_layout.py  test_topology_link.py
tests/web/: __init__.py  main.py  test_app.py  test_application_context.py  test_bootstrap.py  test_dependencies.py  test_infrastructure_api.py  test_infrastructure_mapper.py  test_infrastructure_request.py  test_observation_mapper.py  test_observation_request.py  test_static_ui.py  test_timeline_mapper.py  test_timeline_view.py  test_topology_api.py  test_topology_canvas_static.py  test_topology_mapper.py  test_websocket_hub.py
(+175 files in other folders)
