[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ohanna-vision"
version = "0.1.0"
description = "Interface web et portail d'administration de l'écosystème Ohanna"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Cédric Harnois" }
]
dependencies = [
    "fastapi",
    "pydantic",
    "PyYAML",
    "uvicorn[standard]",
]

[project.scripts]
ohanna-vision = "ohanna_vision.main:main"

[dependency-groups]
dev = [
    "build",
    "httpx",
    "pytest",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "build",
    "httpx",
    "pytest>=9.0",
    "ruff>=0.12",
]

[tool.setuptools.package-data]
ohanna_vision = [
    "web/static/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/styles/*.css",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"