[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ohana-vision"
version = "1.2.0"
description = "Interface web et portail d'administration de l'écosystème Ohana"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Cédric Harnois" }
]
dependencies = [
    "fastapi>=0.116",
    "pydantic>=2.11",
    "PyYAML>=6.0",
    "uvicorn[standard]",
]

[project.scripts]
ohana-vision = "ohana_vision.main:main"

[project.optional-dependencies]
dev = [
    "build",
    "httpx",
    "pytest>=9.0",
    "ruff>=0.12",
]

[tool.setuptools.package-data]
ohana_vision = [
    "web/static/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/assets/favicons/*.ico",
    "web/static/assets/favicons/*.svg",
    "web/static/assets/favicons/*.png",
    "web/static/assets/icons/*/*.svg",
    "web/static/assets/logos/*.svg",
    "web/static/*.webmanifest",
    "web/static/styles/*.css",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
